--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,9 @@ body {
 
 .btn {
   border: none;
-  border-radius: 4px;
+  border-radius: 32px;
   display: inline-block;
   height: 2.5em;
-  line-height: 2.5em;
   padding: 0 32px;
   vertical-align: middle;
   -webkit-tap-highlight-color: transparent;
@@ -90,41 +89,34 @@ body {
     background-color: #b32d00;
     box-shadow: inset 1px 1px 8px -1px rgba(0, 0, 0, 0.5); }
 
-.mobile-button {
-  display: none;
-  position: absolute;
-  bottom: 80px;
-  left: 0;
-  right: 0;
-  width: 80%;
-  text-align: center;
-  margin: 0 auto;
-  font-weight: 300;
-  border-radius: 4px;
-  box-shadow: 0 0 16px rgba(204, 51, 0, 0.4);
-  height: 48px;
-  line-height: 48px;
-  transition: 0.2s;
-  animation: pulse 1s infinite alternate !important; }
-  @media screen and (max-width: 992px) {
-    .mobile-button {
-      display: block !important; } }
-
-@keyframes pulse {
-  0% {
-    box-shadow: 0 0 4px rgba(204, 51, 0, 0.5); }
-  100% {
-    box-shadow: 0 0 12px rgba(204, 51, 0, 0.8); } }
-.btn-outline-primary {
+.btn-outline {
   background-color: transparent;
-  color: #cc3300 !important;
-  border: 1px solid #cc3300;
-  transition: all 0.2s ease-in-out; }
-  .btn-outline-primary:hover {
-    box-shadow: 1px 1px 8px -1px rgba(0, 0, 0, 0.5); }
-  .btn-outline-primary:focus {
-    box-shadow: 0 0 0 2px rgba(204, 51, 0, 0.5);
-    color: rgba(204, 51, 0, 0.8) !important; }
+  color: #000;
+  border: 1.5px solid #cc3300;
+  transition: all 0.2s ease-in-out;
+  padding: 0 24px;
+  box-shadow: none; }
+  .btn-outline:hover {
+    box-shadow: 1px 1px 8px -1px rgba(204, 51, 0, 0.5); }
+  .btn-outline:focus {
+    box-shadow: 0 0 0 2px rgba(204, 51, 0, 0.5) !important;
+    background-color: transparent !important; }
+
+.btn-circle {
+  width: 32px;
+  height: 32px;
+  line-height: 32px;
+  padding: 0;
+  text-align: center;
+  box-shadow: none;
+  border: 1.5px solid #cc3300; }
+  .btn-circle i {
+    font-size: 1.3em; }
+  .btn-circle:hover {
+    box-shadow: 1px 1px 8px -1px rgba(204, 51, 0, 0.5); }
+  .btn-circle:focus {
+    box-shadow: 0 0 0 2px rgba(204, 51, 0, 0.5) !important;
+    background-color: transparent !important; }
 
 .input-group .btn-grouped {
   border-top-right-radius: 8px;
@@ -140,122 +132,6 @@ body {
   .input-group .btn-grouped:focus {
     outline: 0;
     box-shadow: inset 1px 1px 8px -1px rgba(0, 0, 0, 0.5); }
-
-.hero .heading {
-  height: calc(100vh - 64px);
-  width: 90%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: row;
-  align-items: center; }
-  @media only screen and (max-width: 992px) {
-    .hero .heading {
-      height: 100vh; } }
-  .hero .heading .row {
-    height: 100%;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-    @media only screen and (max-width: 992px) {
-      .hero .heading .row {
-        flex-direction: column;
-        justify-self: center;
-        margin: 0 auto; } }
-    @media only screen and (max-height: 425px) {
-      .hero .heading .row {
-        flex-direction: row; } }
-    .hero .heading .row .col h1 {
-      align-self: center;
-      font-size: 50px;
-      font-weight: 300;
-      margin: 0;
-      font-weight: bold;
-      text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); }
-      @media screen and (max-width: 992px) {
-        .hero .heading .row .col h1 .mobile-break {
-          display: none; } }
-      @media screen and (max-width: 320px) {
-        .hero .heading .row .col h1 {
-          font-size: 1.5em;
-          text-align: center;
-          margin-bottom: 0; } }
-      @media screen and (min-width: 321px) and (max-width: 992px) {
-        .hero .heading .row .col h1 {
-          font-size: 2em;
-          text-align: center;
-          margin-bottom: 0; } }
-    .hero .heading .row .col h3 {
-      font-weight: 500; }
-    .hero .heading .row .col p {
-      font-weight: 500;
-      font-size: 14px;
-      width: 80%; }
-    .hero .heading .row .col .profile {
-      position: absolute;
-      display: flex;
-      flex-direction: column;
-      right: 24px;
-      bottom: 8px;
-      height: 140px; }
-      .hero .heading .row .col .profile .text {
-        width: 80%; }
-        .hero .heading .row .col .profile .text .quote p {
-          font-weight: 500;
-          text-align: right;
-          width: 100%; }
-        .hero .heading .row .col .profile .text .name {
-          font-weight: 500;
-          position: relative;
-          font-size: 18px;
-          text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
-          text-align: right; }
-        .hero .heading .row .col .profile .text .office {
-          display: block;
-          text-align: right;
-          font-size: 14px; }
-        .hero .heading .row .col .profile .text hr {
-          width: 20%;
-          margin-inline-start: 80%;
-          margin-top: 2px;
-          margin-bottom: 2px; }
-        .hero .heading .row .col .profile .text .linkedin {
-          text-align: right; }
-          .hero .heading .row .col .profile .text .linkedin a {
-            color: #ffffff;
-            font-weight: 500;
-            font-size: 14px; }
-            .hero .heading .row .col .profile .text .linkedin a i {
-              margin-left: 4px; }
-            .hero .heading .row .col .profile .text .linkedin a:hover {
-              color: #cc3300; }
-      .hero .heading .row .col .profile .profile_picture {
-        width: 120px;
-        height: 120px;
-        position: absolute;
-        right: 0;
-        margin-top: 10px;
-        margin-bottom: 10px; }
-
-.resume .section-text {
-  width: 90%;
-  margin: 0 auto; }
-  .resume .section-text h2 {
-    margin: 0;
-    margin-bottom: 8px;
-    font-weight: 500;
-    font-size: 24px; }
-  .resume .section-text p {
-    margin: 0;
-    font-size: 18px;
-    font-weight: 500;
-    width: 70%; }
-    @media only screen and (max-width: 992px) {
-      .resume .section-text p {
-        width: unset; } }
-  .resume .section-text h6 {
-    margin: 0;
-    font-size: 1.2em; }
 
 .card {
   position: relative;
@@ -445,256 +321,12 @@ body {
   color: #ffffff;
   position: relative;
   background-color: white; }
-  @media only screen and (max-width: 992px) {
-    .hero .heading .row .col h2 {
-      text-align: center; }
-    .hero .heading .row .col p {
-      display: none; }
-    .hero .heading .profile {
-      display: none !important; } }
-  .hero .heading .background {
-    z-index: -1; }
-
-.resume {
-  height: unset;
-  position: relative;
-  background-color: #ffffff;
-  padding-top: 8px; }
-  @media only screen and (min-width: 1400px) {
-    .resume {
-      height: 50vh; } }
-  .resume .heading {
-    width: 90%;
-    margin: 0 auto;
-    color: #000; }
-    .resume .heading h1 {
-      font-size: 30px; }
-      @media only screen and (max-width: 992px) {
-        .resume .heading h1 {
-          font-size: 24px; } }
-      .resume .heading h1 span {
-        font-size: 42px; }
-        @media only screen and (max-width: 992px) {
-          .resume .heading h1 span {
-            font-size: 24px; } }
-  .resume .section-text {
-    color: #000;
-    text-align: left; }
-    @media only screen and (max-width: 992px) {
-      .resume .section-text {
-        padding-bottom: 40px; } }
-    .resume .section-text h2 {
-      color: #000; }
-    .resume .section-text p {
-      color: #000; }
-      @media only screen and (max-width: 992px) {
-        .resume .section-text p {
-          font-size: 16px;
-          font-weight: normal; } }
-    @media only screen and (min-width: 1400px) {
-      .resume .section-text {
-        margin-left: 20%; } }
-
-.services {
-  height: 80vh;
-  background-color: #ffffff;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center; }
-  @media only screen and (max-width: 992px) {
-    .services {
-      display: none; } }
-  .services h1 {
-    margin: 0; }
-  .services .services_grid {
-    margin-top: 32px;
-    width: 80%; }
-    .services .services_grid .row .col {
-      padding: 0; }
-      .services .services_grid .row .col .item-top {
-        padding-bottom: 20px; }
-      .services .services_grid .row .col .item-bottom {
-        padding-top: 20px;
-        align-self: flex-end; }
-      .services .services_grid .row .col .icon i {
-        font-size: 50px;
-        color: #c4c4c4; }
-      .services .services_grid .row .col .info p {
-        font-weight: 500; }
-      .services .services_grid .row .col hr {
-        border: 1.5px solid #f4f4f4;
-        width: 100%; }
-    .services .services_grid .row .left-col {
-      justify-content: flex-start;
-      border-right: 3px solid #f4f4f4; }
-    .services .services_grid .row .center-col {
-      justify-content: center; }
-      .services .services_grid .row .center-col .icon {
-        text-align: center; }
-      .services .services_grid .row .center-col p {
-        text-align: center; }
-    .services .services_grid .row .right-col {
-      justify-content: flex-end;
-      border-left: 3px solid #f4f4f4; }
-      .services .services_grid .row .right-col .icon {
-        text-align: right; }
-      .services .services_grid .row .right-col p {
-        text-align: right; }
-
-.spacer {
-  background-color: #ffffff; }
-  .spacer .primary-spacer {
-    border: 1.5px solid #cc3300;
-    margin: 0;
-    width: 60%;
-    margin: 0 auto;
-    align-self: center; }
-
-.text-slider {
-  background-color: #ffffff;
-  height: 60vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column; }
-  @media only screen and (max-width: 992px) {
-    .text-slider {
-      height: unset; } }
-  .text-slider .slider-container {
-    width: 80%;
-    margin: 0 auto; }
-    .text-slider .slider-container p {
-      margin: 0;
-      text-align: center; }
-  @media only screen and (max-width: 992px) {
-    .text-slider .mySlides {
-      padding: 45px; }
-      .text-slider .mySlides p {
-        font-size: 14px; } }
-  @media only screen and (max-width: 992px) {
-    .text-slider .dot-container {
-      display: none; } }
-
-.schema {
-  background-color: #d9d9d9;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 80vh; }
-  @media only screen and (max-width: 992px) {
-    .schema {
-      display: none; } }
-  .schema img {
-    height: 400px; }
-
-.testimonials {
-  height: 85vh;
-  width: 100%;
-  background-color: #000; }
-  @media only screen and (max-width: 992px) {
-    .testimonials {
-      height: unset; } }
-  .testimonials .heading {
-    width: 100%;
-    padding-right: 5%;
-    text-align: right;
-    padding-top: 40px;
-    padding-bottom: 32px;
-    background-image: url("../img/svg/Rectangle.svg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom;
-    background-color: #d9d9d9; }
-    @media only screen and (max-width: 992px) {
-      .testimonials .heading {
-        background-image: unset;
-        background-color: #000; } }
-    .testimonials .heading h1 {
-      font-size: 42px;
-      margin: 0;
-      color: #ffffff; }
-      @media only screen and (max-width: 992px) {
-        .testimonials .heading h1 span {
-          font-size: 24px; } }
-      .testimonials .heading h1 span:last-child {
-        font-size: 30px; }
-        @media only screen and (max-width: 992px) {
-          .testimonials .heading h1 span:last-child {
-            font-size: 24px; } }
-  .testimonials .card {
-    min-height: 350px; }
-    @media only screen and (max-width: 992px) {
-      .testimonials .card {
-        margin: 8px 0; } }
-  .testimonials .testimonial {
-    color: #ffffff; }
-    .testimonials .testimonial q {
-      font-size: 14px; }
-    .testimonials .testimonial.right {
-      text-align: right; }
-  .testimonials .witness {
-    color: #ffffff;
-    display: flex;
-    align-self: flex-start;
-    padding-top: 8px; }
-    @media only screen and (max-width: 992px) {
-      .testimonials .witness {
-        padding-top: 16px; } }
-    .testimonials .witness.right {
-      flex-direction: row-reverse;
-      align-self: flex-end; }
-      .testimonials .witness.right .witness_data {
-        text-align: right;
-        align-items: flex-end;
-        margin-right: 8px; }
-    .testimonials .witness .witness_photo img {
-      height: 50px;
-      border-radius: 50%; }
-    .testimonials .witness .witness_data {
-      margin-left: 8px;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      justify-content: center;
-      height: 50px; }
-      .testimonials .witness .witness_data .name {
-        font-weight: 500; }
-      .testimonials .witness .witness_data .job {
-        font-size: 14px; }
-
-.contact {
-  background-color: #000;
-  color: #ffffff;
-  height: 70vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center; }
-  @media only screen and (max-width: 992px) {
-    .contact {
-      height: unset; } }
-  .contact h1 {
-    text-align: center;
-    margin: 0;
-    padding-bottom: 32px; }
-  .contact form .input-field {
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-  .contact form .button {
-    width: 100%;
-    display: flex; }
-    .contact form .button .btn {
-      width: 60%;
-      text-align: center;
-      margin: 0 auto; }
 
 .footer {
-  height: 45vh;
+  height: 50vh;
   display: block;
-  background-color: #000;
-  color: #ffffff;
+  background-color: #ffffff;
+  color: #423f40;
   position: relative; }
   @media only screen and (max-width: 992px) {
     .footer {
@@ -705,61 +337,72 @@ body {
       height: 100vh;
       position: relative; } }
   .footer .footer-content {
-    height: 100%;
     width: 90%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between; }
-    @media only screen and (max-width: 992px) {
-      .footer .footer-content {
-        flex-direction: column; } }
-    .footer .footer-content .footer-left {
-      align-self: flex-end;
-      margin-bottom: 24px; }
-      @media only screen and (max-width: 992px) {
-        .footer .footer-content .footer-left img {
-          display: none; } }
-      .footer .footer-content .footer-left p {
-        color: #8C8C8C;
-        margin: 8px 0 0 0;
-        font-size: 14px; }
-        @media only screen and (max-width: 992px) {
-          .footer .footer-content .footer-left p {
-            position: absolute;
-            bottom: 8px;
-            left: 0;
-            right: 0;
-            text-align: center;
-            margin-top: 24px; } }
-    .footer .footer-content .footer-right {
-      text-align: right;
-      align-self: flex-end;
-      margin-bottom: 24px; }
-      @media only screen and (max-width: 992px) {
-        .footer .footer-content .footer-right {
-          margin-bottom: 64px; } }
-      .footer .footer-content .footer-right .address li {
-        font-weight: 500;
-        margin-bottom: 4px; }
-        .footer .footer-content .footer-right .address li:last-child {
-          margin-bottom: 0; }
-        .footer .footer-content .footer-right .address li a {
-          color: #ffffff; }
-          .footer .footer-content .footer-right .address li a:hover {
+    margin: 0 auto; }
+    .footer .footer-content .title {
+      font-weight: 400;
+      letter-spacing: 3.5px;
+      font-size: 18px;
+      text-align: center; }
+    .footer .footer-content .carousel .row {
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+      .footer .footer-content .carousel .row .col .item {
+        text-align: center;
+        margin-right: 16px;
+        padding: 0 16px; }
+        .footer .footer-content .carousel .row .col .item .icon {
+          color: #cc3300;
+          font-size: 40px;
+          margin-bottom: 8px; }
+        .footer .footer-content .carousel .row .col .item .item-title {
+          font-weight: 700;
+          color: #000;
+          margin-bottom: 8px; }
+        .footer .footer-content .carousel .row .col .item .desc {
+          font-size: 14px; }
+          .footer .footer-content .carousel .row .col .item .desc p {
+            margin: 0; }
+    .footer .footer-content .links {
+      border-top: 1px solid rgba(66, 63, 64, 0.1);
+      margin: 16px 0; }
+      .footer .footer-content .links .row {
+        margin-top: 24px; }
+        .footer .footer-content .links .row .left-side .col a {
+          display: list-item;
+          list-style: none;
+          margin-top: 8px;
+          color: #423f40;
+          font-size: 15px;
+          letter-spacing: 1.5px; }
+          .footer .footer-content .links .row .left-side .col a:hover {
             color: #cc3300; }
-      .footer .footer-content .footer-right .social {
-        display: none; }
-        .footer .footer-content .footer-right .social a {
-          text-decoration: none;
-          color: unset;
-          margin-right: 16px; }
-          .footer .footer-content .footer-right .social a:last-child {
-            margin-right: 0; }
-        .footer .footer-content .footer-right .social .fab, .footer .footer-content .footer-right .social .fal {
-          font-weight: 500;
-          font-size: 1.2em; }
-          .footer .footer-content .footer-right .social .fab:hover, .footer .footer-content .footer-right .social .fal:hover {
-            color: #cc3300; }
+        .footer .footer-content .links .row .left-side .col .btn-circle {
+          color: #cc3300;
+          font-size: 16px;
+          margin-top: 8px; }
+        .footer .footer-content .links .row .right-side {
+          float: right; }
+          .footer .footer-content .links .row .right-side .col {
+            margin-right: 24px; }
+            .footer .footer-content .links .row .right-side .col:last-child {
+              margin-right: 0; }
+          .footer .footer-content .links .row .right-side h6 {
+            font-size: 15px;
+            letter-spacing: 1.5px;
+            font-weight: 400;
+            margin: 0;
+            margin-top: 8px; }
+          .footer .footer-content .links .row .right-side p {
+            font-size: 14px;
+            margin: 8px 0 0 0; }
+          .footer .footer-content .links .row .right-side button {
+            margin-top: 16px;
+            font-weight: 500;
+            font-size: 14px !important; }
+            .footer .footer-content .links .row .right-side button i {
+              color: #cc3300;
+              margin-left: 4px; }
 
 /*# sourceMappingURL=style.css.map */
