--- a/sass/_styles/atoms/_buttons.sass
+++ b/sass/_styles/atoms/_buttons.sass
@@ -1,9 +1,8 @@
 .btn
   border: none
-  border-radius: 4px
+  border-radius: 32px
   display: inline-block
   height: 2.5em
-  line-height: 2.5em
   padding: 0 32px
   vertical-align: middle
   -webkit-tap-highlight-color: transparent
@@ -49,41 +48,34 @@
     background-color: darken($primary, 5)
     box-shadow: inset 1px 1px 8px -1px transparentize($black, 0.5)
 
-.mobile-button
-  display: none
-  position: absolute
-  bottom: $space-10
-  left: 0
-  right: 0
-  width: 80%
-  text-align: center
-  margin: 0 auto
-  font-weight: 300
-  border-radius: 4px
-  box-shadow: 0 0 16px transparentize($primary, .6)
-  height: $space-6
-  line-height: $space-6
-  transition: .2s
-  animation: pulse 1s infinite alternate !important
-  @media screen and (max-width: 992px)
-    display: block !important
-
-@keyframes pulse
-  0%
-    box-shadow: 0 0 4px transparentize($primary, .5)
-  100%
-    box-shadow: 0 0 12px transparentize($primary, .2)
-
-.btn-outline-primary
+.btn-outline
   background-color: transparent
-  color: $primary !important
-  border: 1px solid $primary
+  color: $black
+  border: 1.5px solid $primary
   transition: all .2s ease-in-out
+  padding: 0 24px
+  box-shadow: none
   &:hover
-    box-shadow: 1px 1px 8px -1px transparentize($black, 0.5)
+    box-shadow: 1px 1px 8px -1px transparentize($primary, 0.5)
   &:focus
-    box-shadow: 0 0 0 2px transparentize($primary, 0.5)
-    color: transparentize($primary, 0.2) !important
+    box-shadow: 0 0 0 2px transparentize($primary, 0.5) !important
+    background-color: transparent !important
+
+.btn-circle
+  width: $space-4
+  height: $space-4
+  line-height: $space-4
+  padding: 0
+  text-align: center
+  box-shadow: none
+  border: 1.5px solid $primary
+  i
+    font-size: 1.3em
+  &:hover
+    box-shadow: 1px 1px 8px -1px transparentize($primary, 0.5)
+  &:focus
+    box-shadow: 0 0 0 2px transparentize($primary, 0.5) !important
+    background-color: transparent !important
 
 %btn-grouped
   border-top-right-radius: 8px
