ajusta background de botao e espaço no footer

--- a/sass/_styles/atoms/_buttons.sass
+++ b/sass/_styles/atoms/_buttons.sass
@@ -69,6 +69,8 @@
   text-align: center
   box-shadow: none
   border: 1.5px solid $primary
+  background-color: transparent !important
+
   i
     font-size: 1.3em
   &:hover
