--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,12 @@
 * {
   transition: all 0.2s ease-in-out;
   font-smoothing: subpixel-antialiased;
-  -webkit-font-smoothing: subpixel-antialiased; }
+  -webkit-font-smoothing: subpixel-antialiased;
+}
 
 html {
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+}
 
 body {
   font-family: "Source Sans Pro", sans-serif;
@@ -13,31 +15,40 @@ body {
   font-style: normal;
   color: #000;
   margin: 0;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+}
 
 .row {
-  margin-bottom: 0 !important; }
+  margin-bottom: 0 !important;
+}
 
 .bg-gradient-primary {
-  background-image: linear-gradient(to bottom, #004a8d, #053973, #042959, #011a41); }
+  background-image: linear-gradient(to bottom, #004a8d, #053973, #042959, #011a41);
+}
 
 .bg-gradient-primary-2 {
-  background-image: linear-gradient(to top, #1e90e7 27.1%, #4365e1 77.8%); }
+  background-image: linear-gradient(to top, #1e90e7 27.1%, #4365e1 77.8%);
+}
 
 .bg-gradient-primary-3 {
-  background-image: radial-gradient(circle farthest-corner at 270%, #37d1ff 0%, #0e1f6f 100.2%); }
+  background-image: radial-gradient(circle farthest-corner at 270%, #37d1ff 0%, #0e1f6f 100.2%);
+}
 
 .bg-white {
   background-image: url("../img/svg/bg-white.svg");
   background-position-y: -40%;
   background-repeat: no-repeat;
-  background-size: cover; }
-  @media only screen and (min-width: 1400px) {
-    .bg-white {
-      background-position-y: -20%; } }
+  background-size: cover;
+}
+@media only screen and (min-width: 1400px) {
+  .bg-white {
+    background-position-y: -20%;
+  }
+}
 
 .text-primary {
-  color: #D41E22; }
+  color: #D41E22;
+}
 
 .btn {
   border: none;
@@ -51,9 +62,11 @@ body {
   box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.3);
   transition: 0.2s;
   cursor: pointer;
-  font-size: 16px; }
-  .btn:hover {
-    box-shadow: 1px 1px 8px -1px rgba(0, 0, 0, 0.5); }
+  font-size: 16px;
+}
+.btn:hover {
+  box-shadow: 1px 1px 8px -1px rgba(0, 0, 0, 0.5);
+}
 
 .btn-link {
   border: none;
@@ -65,29 +78,37 @@ body {
   background-color: transparent;
   transition: 0.2s;
   color: #cc3300;
-  box-shadow: none; }
-  .btn-link:hover {
-    box-shadow: none;
-    color: #ff4000; }
+  box-shadow: none;
+}
+.btn-link:hover {
+  box-shadow: none;
+  color: #ff4000;
+}
 
 .btn-white {
   background-color: #ffffff;
-  color: #cc3300 !important; }
-  .btn-white:hover {
-    background-color: #f2f2f2; }
-  .btn-white:focus {
-    background-color: #e6e6e6;
-    box-shadow: none; }
+  color: #cc3300 !important;
+}
+.btn-white:hover {
+  background-color: #f2f2f2;
+}
+.btn-white:focus {
+  background-color: #e6e6e6;
+  box-shadow: none;
+}
 
 .btn-primary {
   background: linear-gradient(108.43deg, #DD4718 0%, #D51E22 100%);
   color: #ffffff !important;
-  transition: all 0.2s ease-in-out; }
-  .btn-primary:hover {
-    background-color: #b82e00; }
-  .btn-primary:focus {
-    background-color: #b32d00;
-    box-shadow: inset 1px 1px 8px -1px rgba(0, 0, 0, 0.5); }
+  transition: all 0.2s ease-in-out;
+}
+.btn-primary:hover {
+  background-color: #b82e00;
+}
+.btn-primary:focus {
+  background-color: #b32d00;
+  box-shadow: inset 1px 1px 8px -1px rgba(0, 0, 0, 0.5);
+}
 
 .btn-outline {
   background-color: transparent;
@@ -95,12 +116,15 @@ body {
   border: 1.5px solid #cc3300;
   transition: all 0.2s ease-in-out;
   padding: 0 24px;
-  box-shadow: none; }
-  .btn-outline:hover {
-    box-shadow: 1px 1px 8px -1px rgba(204, 51, 0, 0.5); }
-  .btn-outline:focus {
-    box-shadow: 0 0 0 2px rgba(204, 51, 0, 0.5) !important;
-    background-color: transparent !important; }
+  box-shadow: none;
+}
+.btn-outline:hover {
+  box-shadow: 1px 1px 8px -1px rgba(204, 51, 0, 0.5);
+}
+.btn-outline:focus {
+  box-shadow: 0 0 0 2px rgba(204, 51, 0, 0.5) !important;
+  background-color: transparent !important;
+}
 
 .btn-circle {
   width: 32px;
@@ -109,14 +133,19 @@ body {
   padding: 0;
   text-align: center;
   box-shadow: none;
-  border: 1.5px solid #cc3300; }
-  .btn-circle i {
-    font-size: 1.3em; }
-  .btn-circle:hover {
-    box-shadow: 1px 1px 8px -1px rgba(204, 51, 0, 0.5); }
-  .btn-circle:focus {
-    box-shadow: 0 0 0 2px rgba(204, 51, 0, 0.5) !important;
-    background-color: transparent !important; }
+  border: 1.5px solid #cc3300;
+  background-color: transparent !important;
+}
+.btn-circle i {
+  font-size: 1.3em;
+}
+.btn-circle:hover {
+  box-shadow: 1px 1px 8px -1px rgba(204, 51, 0, 0.5);
+}
+.btn-circle:focus {
+  box-shadow: 0 0 0 2px rgba(204, 51, 0, 0.5) !important;
+  background-color: transparent !important;
+}
 
 .input-group .btn-grouped {
   border-top-right-radius: 8px;
@@ -126,12 +155,15 @@ body {
   border: none;
   box-shadow: none;
   cursor: pointer;
-  font-family: inherit; }
-  .input-group .btn-grouped:hover {
-    color: #ff6633; }
-  .input-group .btn-grouped:focus {
-    outline: 0;
-    box-shadow: inset 1px 1px 8px -1px rgba(0, 0, 0, 0.5); }
+  font-family: inherit;
+}
+.input-group .btn-grouped:hover {
+  color: #ff6633;
+}
+.input-group .btn-grouped:focus {
+  outline: 0;
+  box-shadow: inset 1px 1px 8px -1px rgba(0, 0, 0, 0.5);
+}
 
 .card {
   position: relative;
@@ -149,53 +181,72 @@ body {
   background-clip: border-box;
   border-radius: 4px;
   padding: 24px 32px;
-  box-shadow: 2px 2px 10px -2px rgba(0, 0, 0, 0.2); }
+  box-shadow: 2px 2px 10px -2px rgba(0, 0, 0, 0.2);
+}
 
 .plan-card {
   width: 25%;
   height: 60%;
-  align-items: flex-start; }
-  @media only screen and (max-width: 992px) {
-    .plan-card {
-      width: 80%;
-      align-items: center; } }
-  .plan-card .card-title {
-    text-align: left;
-    margin-bottom: 16px; }
-    .plan-card .card-title h1 {
-      margin: 0; }
-  .plan-card .price-stripped {
-    color: #5d5d5d; }
-    .plan-card .price-stripped small {
-      font-size: 1em;
-      text-decoration: line-through;
-      font-weight: 500; }
-  .plan-card .price {
-    color: #cc3300;
-    margin-bottom: 8px; }
-    .plan-card .price h2 {
-      margin: 0; }
-      .plan-card .price h2 small {
-        font-size: 0.6em; }
-  .plan-card .description {
-    color: #8C8C8C;
-    margin-bottom: 16px; }
-    .plan-card .description p {
-      margin: 0; }
-  .plan-card .list {
-    color: #8C8C8C;
-    margin-bottom: 8px; }
-    .plan-card .list ul li {
-      list-style: none;
-      margin-bottom: 4px; }
+  align-items: flex-start;
+}
+@media only screen and (max-width: 992px) {
+  .plan-card {
+    width: 80%;
+    align-items: center;
+  }
+}
+.plan-card .card-title {
+  text-align: left;
+  margin-bottom: 16px;
+}
+.plan-card .card-title h1 {
+  margin: 0;
+}
+.plan-card .price-stripped {
+  color: #5d5d5d;
+}
+.plan-card .price-stripped small {
+  font-size: 1em;
+  text-decoration: line-through;
+  font-weight: 500;
+}
+.plan-card .price {
+  color: #cc3300;
+  margin-bottom: 8px;
+}
+.plan-card .price h2 {
+  margin: 0;
+}
+.plan-card .price h2 small {
+  font-size: 0.6em;
+}
+.plan-card .description {
+  color: #8C8C8C;
+  margin-bottom: 16px;
+}
+.plan-card .description p {
+  margin: 0;
+}
+.plan-card .list {
+  color: #8C8C8C;
+  margin-bottom: 8px;
+}
+.plan-card .list ul li {
+  list-style: none;
+  margin-bottom: 4px;
+}
+.plan-card .card-button {
+  margin-top: 16px;
+}
+@media only screen and (max-width: 992px) {
   .plan-card .card-button {
-    margin-top: 16px; }
-    @media only screen and (max-width: 992px) {
-      .plan-card .card-button {
-        align-self: center; } }
-    .plan-card .card-button .btn {
-      border-radius: 4px;
-      font-weight: 400; }
+    align-self: center;
+  }
+}
+.plan-card .card-button .btn {
+  border-radius: 4px;
+  font-weight: 400;
+}
 
 .input-group .input-grouped {
   display: block;
@@ -213,24 +264,30 @@ body {
   background-color: #1B1A1A;
   color: #000;
   font-weight: 500;
-  border-right: none; }
-  .input-group .input-grouped::placeholder {
-    color: #666666;
-    font-size: 14px;
-    font-weight: normal; }
-  .input-group .input-grouped:focus {
-    outline: 0 !important;
-    box-shadow: none !important; }
+  border-right: none;
+}
+.input-group .input-grouped::placeholder {
+  color: #666666;
+  font-size: 14px;
+  font-weight: normal;
+}
+.input-group .input-grouped:focus {
+  outline: 0 !important;
+  box-shadow: none !important;
+}
 
 .label {
   background-color: transparent !important;
   text-align: left !important;
   font-weight: 500;
-  margin-left: 160px; }
-  @media only screen and (max-width: 992px) {
-    .label {
-      margin-left: 15%;
-      width: unset !important; } }
+  margin-left: 160px;
+}
+@media only screen and (max-width: 992px) {
+  .label {
+    margin-left: 15%;
+    width: unset !important;
+  }
+}
 
 .form-input {
   color: #fff;
@@ -246,163 +303,209 @@ body {
   padding: inherit;
   box-sizing: content-box;
   transition: box-shadow 0.3s, border 0.3s;
-  line-height: 2.5em; }
-  @media only screen and (max-width: 992px) {
-    .form-input {
-      width: 70%; } }
-  .form-input:focus {
-    border: 1px solid #1B1A1A !important;
-    box-shadow: inset 4px 4px 10px -2px rgba(0, 0, 0, 0.25) !important; }
+  line-height: 2.5em;
+}
+@media only screen and (max-width: 992px) {
+  .form-input {
+    width: 70%;
+  }
+}
+.form-input:focus {
+  border: 1px solid #1B1A1A !important;
+  box-shadow: inset 4px 4px 10px -2px rgba(0, 0, 0, 0.25) !important;
+}
 
 .input-group {
   display: flex;
   flex-direction: row;
   padding: 2px;
   border-radius: 8px;
-  background-color: transparent; }
-
+  background-color: transparent;
+}
 .hero .navbar-fixed {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 16px 0;
   border-bottom: 2px solid #cc3300;
-  height: 80px; }
-  @media screen and (max-width: 992px) {
-    .hero .navbar-fixed {
-      position: absolute;
-      top: 0;
-      right: 0;
-      left: 0; } }
+  height: 80px;
+}
+@media screen and (max-width: 992px) {
+  .hero .navbar-fixed {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+  }
+}
+.hero .navbar-fixed .navbar {
+  background-color: transparent;
+  box-shadow: none;
+  position: relative;
+}
+@media screen and (max-width: 992px) {
   .hero .navbar-fixed .navbar {
-    background-color: transparent;
-    box-shadow: none;
-    position: relative; }
-    @media screen and (max-width: 992px) {
-      .hero .navbar-fixed .navbar {
-        height: fit-content;
-        height: moz-fit-content; } }
-    @media screen and (max-width: 992px) {
-      .hero .navbar-fixed .navbar .nav-wrapper {
-        display: flex;
-        align-items: center;
-        justify-content: center; } }
-    .hero .navbar-fixed .navbar .brand-logo {
-      margin-left: 40px; }
-      .hero .navbar-fixed .navbar .brand-logo img {
-        height: 60px; }
-      @media screen and (max-width: 992px) {
-        .hero .navbar-fixed .navbar .brand-logo {
-          display: flex;
-          align-items: center;
-          align-self: center;
-          justify-self: center;
-          margin: 0;
-          margin-top: 24px; } }
-    .hero .navbar-fixed .navbar ul li:first-child {
-      border-left: 1px solid rgba(140, 140, 140, 0.2); }
-    .hero .navbar-fixed .navbar ul li.icon {
-      border-left: 1px solid rgba(140, 140, 140, 0.2); }
-    .hero .navbar-fixed .navbar ul a {
-      color: #423f40;
-      transition: 0.3s;
-      height: 64px;
-      font-weight: 400;
-      font-size: 14px;
-      letter-spacing: 1.5px;
-      padding: 0 24px; }
-      .hero .navbar-fixed .navbar ul a:hover {
-        color: #cc3300; }
-      .hero .navbar-fixed .navbar ul a:last-child {
-        height: unset; }
-
+    height: fit-content;
+    height: moz-fit-content;
+  }
+}
+@media screen and (max-width: 992px) {
+  .hero .navbar-fixed .navbar .nav-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.hero .navbar-fixed .navbar .brand-logo {
+  margin-left: 40px;
+}
+.hero .navbar-fixed .navbar .brand-logo img {
+  height: 60px;
+}
+@media screen and (max-width: 992px) {
+  .hero .navbar-fixed .navbar .brand-logo {
+    display: flex;
+    align-items: center;
+    align-self: center;
+    justify-self: center;
+    margin: 0;
+    margin-top: 24px;
+  }
+}
+.hero .navbar-fixed .navbar ul li:first-child {
+  border-left: 1px solid rgba(140, 140, 140, 0.2);
+}
+.hero .navbar-fixed .navbar ul li.icon {
+  border-left: 1px solid rgba(140, 140, 140, 0.2);
+}
+.hero .navbar-fixed .navbar ul a {
+  color: #423f40;
+  transition: 0.3s;
+  height: 64px;
+  font-weight: 400;
+  font-size: 14px;
+  letter-spacing: 1.5px;
+  padding: 0 24px;
+}
+.hero .navbar-fixed .navbar ul a:hover {
+  color: #cc3300;
+}
+.hero .navbar-fixed .navbar ul a:last-child {
+  height: unset;
+}
 .hero {
   height: 100vh;
   color: #ffffff;
   position: relative;
-  background-color: white; }
-
+  background-color: white;
+}
 .footer {
   height: 50vh;
   display: block;
   background-color: #ffffff;
   color: #423f40;
-  position: relative; }
-  @media only screen and (max-width: 992px) {
-    .footer {
-      height: unset;
-      position: relative; } }
-  @media only screen and (max-height: 425px) {
-    .footer {
-      height: 100vh;
-      position: relative; } }
-  .footer .footer-content {
-    width: 90%;
-    margin: 0 auto; }
-    .footer .footer-content .title {
-      font-weight: 400;
-      letter-spacing: 3.5px;
-      font-size: 18px;
-      text-align: center; }
-    .footer .footer-content .carousel .row {
-      display: flex;
-      align-items: center;
-      justify-content: center; }
-      .footer .footer-content .carousel .row .col .item {
-        text-align: center;
-        margin-right: 16px;
-        padding: 0 16px; }
-        .footer .footer-content .carousel .row .col .item .icon {
-          color: #cc3300;
-          font-size: 40px;
-          margin-bottom: 8px; }
-        .footer .footer-content .carousel .row .col .item .item-title {
-          font-weight: 700;
-          color: #000;
-          margin-bottom: 8px; }
-        .footer .footer-content .carousel .row .col .item .desc {
-          font-size: 14px; }
-          .footer .footer-content .carousel .row .col .item .desc p {
-            margin: 0; }
-    .footer .footer-content .links {
-      border-top: 1px solid rgba(66, 63, 64, 0.1);
-      margin: 16px 0; }
-      .footer .footer-content .links .row {
-        margin-top: 24px; }
-        .footer .footer-content .links .row .left-side .col a {
-          display: list-item;
-          list-style: none;
-          margin-top: 8px;
-          color: #423f40;
-          font-size: 15px;
-          letter-spacing: 1.5px; }
-          .footer .footer-content .links .row .left-side .col a:hover {
-            color: #cc3300; }
-        .footer .footer-content .links .row .left-side .col .btn-circle {
-          color: #cc3300;
-          font-size: 16px;
-          margin-top: 8px; }
-        .footer .footer-content .links .row .right-side {
-          float: right; }
-          .footer .footer-content .links .row .right-side .col {
-            margin-right: 24px; }
-            .footer .footer-content .links .row .right-side .col:last-child {
-              margin-right: 0; }
-          .footer .footer-content .links .row .right-side h6 {
-            font-size: 15px;
-            letter-spacing: 1.5px;
-            font-weight: 400;
-            margin: 0;
-            margin-top: 8px; }
-          .footer .footer-content .links .row .right-side p {
-            font-size: 14px;
-            margin: 8px 0 0 0; }
-          .footer .footer-content .links .row .right-side button {
-            margin-top: 16px;
-            font-weight: 500;
-            font-size: 14px !important; }
-            .footer .footer-content .links .row .right-side button i {
-              color: #cc3300;
-              margin-left: 4px; }
+  position: relative;
+}
+@media only screen and (max-width: 992px) {
+  .footer {
+    height: unset;
+    position: relative;
+  }
+}
+@media only screen and (max-height: 425px) {
+  .footer {
+    height: 100vh;
+    position: relative;
+  }
+}
+.footer .footer-content {
+  width: 90%;
+  margin: 0 auto;
+}
+.footer .footer-content .title {
+  font-weight: 400;
+  letter-spacing: 3.5px;
+  font-size: 18px;
+  text-align: center;
+}
+.footer .footer-content .carousel .row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer .footer-content .carousel .row .col .item {
+  text-align: center;
+  margin-right: 16px;
+  padding: 0 16px;
+}
+.footer .footer-content .carousel .row .col .item .icon {
+  color: #cc3300;
+  font-size: 40px;
+  margin-bottom: 8px;
+}
+.footer .footer-content .carousel .row .col .item .item-title {
+  font-weight: 700;
+  color: #000;
+  margin-bottom: 8px;
+}
+.footer .footer-content .carousel .row .col .item .desc {
+  font-size: 14px;
+}
+.footer .footer-content .carousel .row .col .item .desc p {
+  margin: 0;
+}
+.footer .footer-content .links {
+  border-top: 1px solid rgba(66, 63, 64, 0.1);
+  margin: 16px 0;
+  margin-bottom: 80px;
+}
+.footer .footer-content .links .row {
+  margin-top: 24px;
+}
+.footer .footer-content .links .row .left-side .col a {
+  display: list-item;
+  list-style: none;
+  margin-top: 8px;
+  color: #423f40;
+  font-size: 15px;
+  letter-spacing: 1.5px;
+}
+.footer .footer-content .links .row .left-side .col a:hover {
+  color: #cc3300;
+}
+.footer .footer-content .links .row .left-side .col .btn-circle {
+  color: #cc3300;
+  font-size: 16px;
+  margin-top: 8px;
+}
+.footer .footer-content .links .row .right-side {
+  float: right;
+}
+.footer .footer-content .links .row .right-side .col {
+  margin-right: 24px;
+}
+.footer .footer-content .links .row .right-side .col:last-child {
+  margin-right: 0;
+}
+.footer .footer-content .links .row .right-side h6 {
+  font-size: 15px;
+  letter-spacing: 1.5px;
+  font-weight: 400;
+  margin: 0;
+  margin-top: 8px;
+}
+.footer .footer-content .links .row .right-side p {
+  font-size: 14px;
+  margin: 8px 0 0 0;
+}
+.footer .footer-content .links .row .right-side button {
+  margin-top: 16px;
+  font-weight: 500;
+  font-size: 14px !important;
+}
+.footer .footer-content .links .row .right-side button i {
+  color: #cc3300;
+  margin-left: 4px;
+}
 
 /*# sourceMappingURL=style.css.map */
