--- a/sass/_styles/pages/_home.sass
+++ b/sass/_styles/pages/_home.sass
@@ -51,6 +51,7 @@
     .links
       border-top: 1px solid transparentize($secondary, .9)
       margin: $space-2 0
+      margin-bottom: $space-10
       .row
         margin-top: $space-3 
         .left-side
