ajustes de bibliotecas de fontes

--- a/css/libs.css
+++ b/css/libs.css
@@ -36,7 +36,7 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; }
+  font-family: "Source Sans Pro", sans-serif; }
 
 ul:not(.browser-default) {
   padding-left: 0;
