--- a/sass/_styles/pages/_home.sass
+++ b/sass/_styles/pages/_home.sass
@@ -27,6 +27,7 @@
       font-size: 18px
       text-align: center
     .carousel
+      margin-bottom: $space-5
       .row
         display: flex
         align-items: center
@@ -53,7 +54,7 @@
       margin: $space-2 0
       margin-bottom: $space-10
       .row
-        margin-top: $space-3 
+        margin-top: $space-4 
         .left-side
           .col
             a
