--- a/sass/_styles/atoms/_slider.sass
+++ b/sass/_styles/atoms/_slider.sass
@@ -41,3 +41,8 @@
         color: transparentize($primary, .8)
     &::before
         color: transparentize($primary, .8)
+
+.slick-slide
+    &:focus
+        border: 0
+        outline: 0
