--- a/sass/_styles/pages/__pages.sass
+++ b/sass/_styles/pages/__pages.sass
@@ -1,1 +1,10 @@
 @import "home"
+@import "cinema"
+@import "alimentacao"
+@import "fale-conosco"
+@import "lazer"
+@import "lojas"
+@import "novidades"
+@import "serviços"
+@import "shopping"
+@import "trabalhe-conosco"
