--- a/sass/_styles/pages/_home.sass
+++ b/sass/_styles/pages/_home.sass
@@ -6,6 +6,80 @@
   .navbar-fixed
     @extend %navbar
 
+  .carousel
+    .carousel-item
+      height: calc(100vh - 80px)
+    .carousel-indicators li
+      width: $space-10
+      background-color: $white
+      opacity: 1
+      &.active
+        background-color: $primary
+    .carousel-control-prev, .carousel-control-next
+      opacity: 1
+      .carousel-control-prev-icon
+        opacity: 1
+        border: 2px solid $white
+        height: $space-5
+        width: $space-5
+        line-height: 35px
+        z-index: 10
+        background-image: none
+        &:hover
+          background-color: $primary
+          border-color: $primary
+        &::before
+          color: $white
+          font-family: "Font Awesome 5 Pro"   
+          content: "\f053"
+      .carousel-control-next-icon
+        opacity: 1
+        border: 2px solid $white
+        height: $space-5
+        width: $space-5
+        line-height: 35px
+        z-index: 10
+        background-image: none
+        &:hover
+          background-color: $primary
+          border-color: $primary
+        &::before
+          color: $white
+          font-family: "Font Awesome 5 Pro"   
+          content: "\f054"
+
+.cinema
+  height: 100vh
+  .title
+    text-align: center
+    font-size: 40px
+    margin-bottom: $space-1 
+  .subtitle
+    text-align: center
+    margin: 0
+  .movies
+    display: flex
+    justify-content: space-around
+    height: 100%
+    margin-top: $space-5
+    .movie-card
+      text-align: center
+      width: 200px
+      height: 280px
+      border-radius: 10px
+      box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.35)	
+      .movie
+        width: 100%
+        height: 100%
+        border-radius: 10px
+      .movie-title
+        margin-top: $space-1
+        text-transform: uppercase
+
+.services
+  height: 100vh  
+  background-color: $gray
+
 .footer
   height: 50vh
   display: block
