--- a/css/style.css
+++ b/css/style.css
@@ -357,7 +357,7 @@ button {
         content: ""; }
 
 .cinema {
-  height: 100vh; }
+  height: 80vh; }
   .cinema .title {
     text-align: center;
     font-size: 40px;
@@ -367,26 +367,48 @@ button {
     margin: 0; }
   .cinema .movies {
     display: flex;
-    justify-content: space-around;
-    height: 100%;
-    margin-top: 40px; }
+    justify-content: center;
+    align-items: center;
+    margin-top: 24px; }
+    .cinema .movies .slick-prev {
+      margin-left: 32px; }
+    .cinema .movies .slick-next {
+      margin-right: 32px; }
     .cinema .movies .movie-card {
       text-align: center;
-      width: 200px;
-      height: 280px;
+      width: 150px;
+      height: 320px;
       border-radius: 10px;
       box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.35); }
       .cinema .movies .movie-card .movie {
         width: 100%;
         height: 100%;
-        border-radius: 10px; }
+        border-radius: 10px;
+        position: relative;
+        opacity: 0.5; }
       .cinema .movies .movie-card .movie-title {
         margin-top: 8px;
-        text-transform: uppercase; }
+        text-transform: uppercase;
+        z-index: 10; }
+  .cinema .container {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid rgba(140, 140, 140, 0.15);
+    border-right: none;
+    border-left: none;
+    padding: 32px;
+    margin-top: 16px; }
+    .cinema .container .btn {
+      align-self: center; }
+      .cinema .container .btn i {
+        color: #cc3300;
+        margin-right: 8px; }
 
 .services {
   height: 100vh;
-  background-color: #8C8C8C; }
+  margin-top: 80px; }
 
 .footer {
   height: 50vh;
