--- a/sass/_styles/pages/_home.sass
+++ b/sass/_styles/pages/_home.sass
@@ -49,7 +49,7 @@
           content: "\f054"
 
 .cinema
-  height: 100vh
+  height: 80vh
   .title
     text-align: center
     font-size: 40px
@@ -59,26 +59,48 @@
     margin: 0
   .movies
     display: flex
-    justify-content: space-around
-    height: 100%
-    margin-top: $space-5
+    justify-content: center
+    align-items: center
+    margin-top: $space-3
+    .slick-prev
+      margin-left: $space-4
+    .slick-next
+      margin-right: $space-4
     .movie-card
       text-align: center
-      width: 200px
-      height: 280px
+      width: 150px
+      height: 320px
       border-radius: 10px
       box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.35)	
       .movie
         width: 100%
         height: 100%
         border-radius: 10px
+        position: relative
+        opacity: .5
       .movie-title
         margin-top: $space-1
         text-transform: uppercase
+        z-index: 10
+  .container
+    width: 90%
+    display: flex
+    align-items: center
+    justify-content: center
+    border: 2px solid transparentize($gray, .85)
+    border-right: none
+    border-left: none
+    padding: $space-4
+    margin-top: $space-2
+    .btn
+      align-self: center
+      i
+        color: $primary
+        margin-right: $space-1
 
 .services
   height: 100vh  
-  background-color: $gray
+  margin-top: $space-10 
 
 .footer
   height: 50vh
