--- a/css/style.css
+++ b/css/style.css
@@ -357,7 +357,7 @@ button {
         content: ""; }
 
 .cinema {
-  height: 80vh; }
+  height: 100vh; }
   .cinema .title {
     text-align: center;
     font-size: 40px;
@@ -406,9 +406,54 @@ button {
         color: #cc3300;
         margin-right: 8px; }
 
-.services {
-  height: 100vh;
-  margin-top: 80px; }
+.alimentacao {
+  height: 100vh; }
+  .alimentacao .title {
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 8px; }
+  .alimentacao .subtitle {
+    text-align: center;
+    margin: 0; }
+  .alimentacao .food-stores {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 24px; }
+    .alimentacao .food-stores .slick-prev {
+      margin-left: 32px; }
+    .alimentacao .food-stores .slick-next {
+      margin-right: 32px; }
+    .alimentacao .food-stores .store-card {
+      text-align: center;
+      width: 150px;
+      height: 150px;
+      border-radius: 150px;
+      box-shadow: 2px 2px 8px -1px rgba(0, 0, 0, 0.35); }
+      .alimentacao .food-stores .store-card .store {
+        width: 100%;
+        height: 100%;
+        border-radius: 150px;
+        position: relative; }
+      .alimentacao .food-stores .store-card .store-title {
+        margin-top: 8px;
+        text-transform: uppercase;
+        z-index: 10; }
+  .alimentacao .container {
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid rgba(140, 140, 140, 0.15);
+    border-right: none;
+    border-left: none;
+    padding: 32px;
+    margin-top: 16px; }
+    .alimentacao .container .btn {
+      align-self: center; }
+      .alimentacao .container .btn i {
+        color: #cc3300;
+        margin-right: 8px; }
 
 .footer {
   height: 50vh;
